syntax = "proto3";

package auth.v1;

option go_package = "github.com/xuewentao/cheya/api/auth/v1;auth.v1";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;//JWT
    int32 expires_in = 2; //过期时间
    string userme = 3;
}